# NVARC

./: .gitignore  IMPLEMENTATION_NOTES.md  README.md  TRACE_FORMAT_ANALYSIS.md  arc_trace_generator.py  compare_original_vs_generated.py  generate_descriptions.py  generate_summaries.py  pyproject.toml  run_nvarc_pipeline.py  seed_to_logic.py  test_gemini3.py  test_on_original_tasks.py  trace_quality.py  trace_to_nvarc.py  verify_logic_on_original.py  verify_trace_quality.py  view_grids_visual.py  view_original_grids.py
ARC-AGI1/: README.md
ARChitects/: README.md
SDG/: README.md
SDG/scripts/: generate_input_grids.py  generate_output_grids.py  parser.py
TRM/: README.md
traces/: 00576224.json  00576224.nvarc.md  007bbfb7.json  007bbfb7.nvarc.md  009d5c81.json  009d5c81.nvarc.md  00d62c1b.json  00d62c1b.nvarc.md  00dbd492.json  00dbd492.nvarc.md  017c7c7b.json  017c7c7b.nvarc.md  025d127b.json  025d127b.nvarc.md  03560426.json  03560426.nvarc.md  045e512c.json  045e512c.nvarc.md  0520fde7.json  0520fde7.nvarc.md  05269061.json  05269061.nvarc.md  05a7bcf2.json  05a7bcf2.nvarc.md  05f2a901.json  05f2a901.nvarc.md  0607ce86.json  0607ce86.nvarc.md  0692e18c.json  0692e18c.nvarc.md  06df4c85.json  06df4c85.nvarc.md  070dd51e.json  070dd51e.nvarc.md  08ed6ac7.json  08ed6ac7.nvarc.md  09629e4f.json  09629e4f.nvarc.md  0962bcdd.json  0962bcdd.nvarc.md  (+160 more)
traces/verification/: 007bbfb7_code.md
traces/verification/grids/verification/mock_split/: 007bbfb7.json
